--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+
+
     <div class="header">
         <p> Header </p>
         <ul>
@@ -22,9 +24,11 @@
     </div>
 
     <div class="hero">
+        <div class="heroleft">
         <h1>This website is awesome</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitatio</p>
         <button> Sign up </button>
+        </div>
         <img src="./img/ethereum-logo-g9f4c03a2a_640.png">
     </div>
 
@@ -74,6 +78,7 @@
     </div>
 
     
+
 </body>
 
 
