--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <div class="information">
         <h2>Some random information</h2>
 
+    <div class="cards_info"> 
         <div class="card">
             <img src="./img/ethereum-logo-g9f4c03a2a_640.png">
             <div class="info"> e irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur </div>
@@ -55,22 +56,24 @@
             <img src="./img/ethereum-logo-g9f4c03a2a_640.png">
             <div class="info"> e irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur </div>
         </div>
-
+    </div>
     </div>
 
     <div class="quote">
         <div>
-            <p>. Risus feugiat in ante metus dictum at tempor. Sodales ut etiam sit amet nisl purus in mollis. Ullamcorper eget nulla facilisi etiam dignissim diam quis enim. Ultrices eros in cursus turpis massa tincid</p>
-            <p>- Folk</p>
+            <p><em>"Risus feugiat in ante metus dictum at tempor. Sodales ut etiam sit amet nisl purus in mollis. Ullamcorper eget nulla facilisi etiam dignissim diam quis enim. Ultrices eros in cursus turpis massa tincid"</em></p>
+            <div class="person"><strong>- Folk</strong></div>
         </div>
     </div>
 
     <div class="call_to_action">
-
+<div class="content">
+    <div class="text_content">
         <h4>Call to action! It's time!</h4>
         <p>Sign up for our product by clicking that button righr over there!</p>
+    </div>
         <button> Sign up </button>
-
+</div>
     </div>
 
     <div class="footer">
