Rough draft done

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitatio</p>
         <button> Sign up </button>
         </div>
-        <img src="./img/ethereum-logo-g9f4c03a2a_640.png">
+        <img src="./img/ethereum-logo-g9f4c03a2a_640.png" class="main_image">
     </div>
 
     <div class="information">
@@ -70,7 +70,7 @@
 <div class="content">
     <div class="text_content">
         <h4>Call to action! It's time!</h4>
-        <p>Sign up for our product by clicking that button righr over there!</p>
+        <p>Sign up for our product by clicking that button right over there!</p>
     </div>
         <button> Sign up </button>
 </div>
