--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
 
     <div class="header">
-        <p> Header </p>
+        <p> Header Logo </p>
         <ul>
-            <li> <a> Header Link 1 </a> </li>
-            <li> <a> Header Link 2 </a> </li>
-            <li> <a> Header Link 3 </a> </li>
+            <li> <a href=""> Header Link 1 </a> </li>
+            <li> <a href=""> Header Link 2 </a> </li>
+            <li> <a href=""> Header Link 3 </a> </li>
         </ul>
     </div>
 
@@ -27,7 +27,7 @@
         <div class="heroleft">
         <h1>This website is awesome</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitatio</p>
-        <button> Sign up </button>
+        <button> <a href="">  Sign up  </a> </button>
         </div>
         <img src="./img/ethereum-logo-g9f4c03a2a_640.png" class="main_image">
     </div>
@@ -72,7 +72,7 @@
         <h4>Call to action! It's time!</h4>
         <p>Sign up for our product by clicking that button right over there!</p>
     </div>
-        <button> Sign up </button>
+        <button> <a href=""> Sign up  </a> </button>
 </div>
     </div>
 
